安定化のためにz軸方向のカメラ移動削除

--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
         //threejs_camera.position = positionLeftEye;
 
         //threejs_camera.position.z += 1
-        threejs_camera.position.x = (positionLeftEye['x'] + positionRightEye['x'])/2 * -100 +50
-        threejs_camera.position.y = (positionLeftEye['y'] + positionRightEye['y'])/2 * -100 +100
-        threejs_camera.position.z = (positionLeftEye['z'] + positionRightEye['z'])/2 * 800 +30
+        threejs_camera.position.x = (positionLeftEye['x'] + positionRightEye['x'])/2 * -200 +100
+        threejs_camera.position.y = (positionLeftEye['y'] + positionRightEye['y'])/2 * -150 +100
+        //threejs_camera.position.z = (positionLeftEye['z'] + positionRightEye['z'])/2 * 800 +30
 
         threejs_camera.lookAt(new THREE.Vector3(0, 0, 0));
 
