--- a/index.html
+++ b/index.html
@@ -331,9 +331,25 @@
         //threejs_camera.position = positionLeftEye;
 
         //threejs_camera.position.z += 1
-        threejs_camera.position.x = (positionLeftEye['x'] + positionRightEye['x'])/2 * -200 +100
-        threejs_camera.position.y = (positionLeftEye['y'] + positionRightEye['y'])/2 * -150 +100
-        //threejs_camera.position.z = (positionLeftEye['z'] + positionRightEye['z'])/2 * 800 +30
+        var pos_x = (positionLeftEye['x'] + positionRightEye['x'])/2 * -100 +50
+        if(pos_x > 49){
+            pos_x = 49
+        }else if(pos_x < -49){
+            pos_x = -49
+        }
+        var pos_z_1 = Math.sqrt(50**2 - pos_x**2)
+
+        var pos_y = (positionLeftEye['y'] + positionRightEye['y'])/2 * -100 +100
+        if(pos_y > pos_z_1){
+            pos_y = pos_z_1
+        }else if(pos_y < pos_z_1*-1){
+            pos_y = pos_z_1*-1
+        }
+        var pos_z_2 = Math.sqrt(pos_z_1**2 - pos_y**2)
+
+        threejs_camera.position.x = pos_x
+        threejs_camera.position.y = pos_y
+        threejs_camera.position.z = pos_z_2
 
         threejs_camera.lookAt(new THREE.Vector3(0, 0, 0));
 
